--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,9 @@ jobs:
         include:
           - os: macos-11.0
             swift: "5.6"
-          - os: macos-12.0
-            swift: "5.6"
+          # hard to get a macos-12.0 runner on GitHub
+          # - os: macos-12.0
+          #   swift: "5.6"
           - os: ubuntu-20.04
             swift: "5.6"
 
