--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         include:
           - os: macos-12
             swift: "5.7"
-          - os: ubuntu-22.04
+          - os: ubuntu-latest
             swift: "5.7"
 
     steps:
@@ -23,7 +23,7 @@ jobs:
         with:
           swift-version: ${{ matrix.swift }}
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: "swift test"
         run: swift test
