--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
             swift: "5.9"
 
     steps:
-      - uses: slashmo/install-swift@v0.4.0
+      - uses: swift-actions/setup-swift@v1
         with:
-          version: ${{ matrix.swift }}
+          swift-version: ${{ matrix.swift }}
 
       - uses: actions/checkout@v3
 
