--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,17 @@ jobs:
         include:
           - os: macos-13
             swift: "5.8"
+          - os: macos-13
+            swift: "5.9"
           - os: ubuntu-latest
             swift: "5.8"
+          - os: ubuntu-latest
+            swift: "5.9"
 
     steps:
-      - uses: slashmo/install-swift@v0.4.0
+      - uses: swift-actions/setup-swift@v1
         with:
-          version: ${{ matrix.swift }}
+          swift-version: ${{ matrix.swift }}
 
       - uses: actions/checkout@v3
 
