--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,7 @@ jobs:
       matrix:
         include:
           - os: macos-13
-            swift: "5.8"
-          - os: macos-13
             swift: "5.9"
-          - os: ubuntu-latest
-            swift: "5.8"
           - os: ubuntu-latest
             swift: "5.9"
 
@@ -26,6 +22,11 @@ jobs:
       - uses: swift-actions/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift }}
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+        if: matrix.os != 'ubuntu-latest'
 
       - uses: actions/checkout@v3
 
